# ixl

./: .env.example  .gitignore  Makefile  PLAN-v2.md  PLAN.md  README.md  install-lxc.sh  openclaw-agent.yaml  pyproject.toml
.githooks/: post-commit
.github/workflows/: ci.yml
cron/: accounts.env.example  ixl-cron.sh
docs/superpowers/plans/: 2026-03-30-goal-tracking.md  2026-04-11-compare.md  2026-04-11-export.md  2026-04-11-history-and-trends.md  2026-04-11-notify.md  2026-04-11-scraper-tests-and-priority.md
docs/superpowers/specs/: 2026-03-30-goal-tracking-design.md
ixl_cli/: __init__.py  __main__.py  cli.py  compare.py  export.py  goals.py  history.py  notify.py  session.py
ixl_cli/scrapers/: __init__.py  children.py  diagnostics.py  skills.py  trouble_spots.py  usage.py
scripts/: bump-version.sh
tests/: conftest.py  test_cli.py  test_compare.py  test_export.py  test_goals.py  test_history.py  test_notify.py  test_scrapers.py  test_session.py  test_skills.py
