[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ixl"
version = "0.2.0"
description = "IXL student account CLI scraper"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]

[project.scripts]
ixl = "ixl_cli.cli:main"
