[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ixl"
version = "0.16.1"
description = "IXL student account CLI scraper"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.33.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]
dev = ["pytest>=7.0"]

[project.scripts]
ixl = "ixl_cli.cli:main"

[tool.setuptools.packages.find]
include = ["ixl_cli*"]
